# drone

./: .gitignore  README.md
.catkin_tools/profiles/default/: devel_collisions.txt
.devcontainer/: devcontainer.json
ros_ws/.catkin_tools/profiles/default/: devel_collisions.txt
ros_ws/src/aero_control/: package.xml
ros_ws/src/aero_control/include/: offb_controller_node.h
ros_ws/src/aero_control/include/aero_control/: offb_controller_node.h
ros_ws/src/aero_control/launch/: aero_control.launch
ros_ws/src/aero_control/src/: offb_controller_node.cpp
ros_ws/src/aero_gazebo/launch/: aero_gazebo.launch
src/aero_actionlib/: CMakeLists.txt  package.xml
src/aero_actionlib/src/: takeoff_server.cpp
src/aero_control/: CMakeLists.txt
src/aero_control/include/aero_control/: offb_controller.h
src/aero_control/src/: offb_controller.cpp
src/aero_gazebo/: CMakeLists.txt  package.xml
src/aero_gazebo/models/iris/: iris.sdf
src/aero_gazebo/models/iris_rplidar/: iris_rplidar.sdf
src/aero_gazebo/models/rplidar/: model.sdf
src/aero_gazebo/resource/: px4_config.yaml
src/aero_gazebo/world/: willowgarage.world
src/aero_gazebo/world/maps/: willow_full.yaml
src/aero_gazebo/world/maps/Mansveld/: Mansveld.yaml
src/aero_msgs/: CMakeLists.txt  package.xml
